--- a/pages/_home.scss
+++ b/pages/_home.scss
@@ -69,7 +69,7 @@
     position: absolute;
     margin-top: -8.8rem;
     margin-left: 3rem;
-    z-index: 10;
+    z-index: 1;
 }
 
 .product-bio-card-h2 {
