--- a/styles/style.css
+++ b/styles/style.css
@@ -374,6 +374,7 @@ header {
   padding: 0 2.895rem;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
+  z-index: 2;
 }
 
 @media (max-width: 57em) {
@@ -552,7 +553,7 @@ nav ul li {
   position: absolute;
   margin-top: -8.8rem;
   margin-left: 3rem;
-  z-index: 10;
+  z-index: 1;
 }
 
 .product-bio-card-h2 {
